project setup completed

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "backend"
   ],
   "author": "Vinayak Lokhande",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
+  }
 }
