--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "youtubeapidevelopmentbyhiteshchoudhary",
   "version": "1.0.0",
   "description": "a backend of clone youtube",
+  "type":"module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "js",
@@ -14,7 +15,13 @@
   "author": "Vinayak Lokhande",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.7",
+    "nodemon":"^3.1.7",
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.2"
+
   }
 }
