--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "youtubeapidevelopmentbyhiteshchoudhary",
   "version": "1.0.0",
   "description": "a backend of clone youtube",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
@@ -15,15 +15,17 @@
   "author": "Vinayak Lokhande",
   "license": "ISC",
   "devDependencies": {
-    "nodemon":"^3.1.7",
+    "nodemon": "^3.1.7",
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "1.4.7",
+    "cors": "2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
-    "cookie-parser":"1.4.7",
-    "cors":"2.8.5"
-
+    "mongoose-aggregate-paginate-v2": "^1.1.2"
   }
 }
